--- a/src/main/resources/templates/update-password-success.html
+++ b/src/main/resources/templates/update-password-success.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <title>Add</title>
+    <title>Success</title>
     <object th:include="fragments/fragment :: css" th:remove="tag"></object>
     <object th:include="fragments/fragment :: js" th:remove="tag"></object>
 </head>
