--- a/src/main/resources/templates/update-password.html
+++ b/src/main/resources/templates/update-password.html
@@ -13,9 +13,7 @@
     <div class="container-fluid">
         <h2 th:text=" 'Hello ' + ${#httpServletRequest.remoteUser} + ' !'">Login as</h2>
         
-		<div class="alert" th:if=${msg}>
-		  <div th:text="${message}" class="alert alert-danger" onclick="this.parentElement.style.display='none';"></div> 
-		</div>
+
         
         <div class="row">
             <div class="col-md-6">
@@ -24,6 +22,10 @@
                         Update Password
                     </div>
                     <div class="card-body">
+                    	<div th:if=${message}>
+		  				<span th:text="${message}" style="color: red" onclick="this.parentElement.style.display='none';"></span> 
+						</div>
+						<br>
                     	<form th:action="@{/user/updatePassword}" method="post">
                     		<div class="row form-group">
                     			<label class="col-sm-4"> Password Lama:</label>
