--- a/src/main/resources/templates/deletePilot.html
+++ b/src/main/resources/templates/deletePilot.html
@@ -29,6 +29,8 @@
 								<input class="form-control" type="number" th:field="*{flyHour}" name="flyHour" readonly>
 								<br><br>	
 	                           <td style="padding: 10px;">
+								<a th:href="@{'/'}">
+				                <input type="button" class="btn btn-primary" value = "Batal"></a>
 								<button type="submit" class="btn btn-danger" name="submit">Hapus</button>
 								</td>
 	                            <br>
